--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@ body{
 }
     
 
-
-.background{
+ 
+ .background{
     
     background-image:linear-gradient(to bottom, rgba(10, 10, 10, 0.92), rgba(7, 7, 7, 0.73)), url(image/background.jpg);
     height: 100vh;
@@ -26,7 +26,7 @@ body{
    
     position: relative;
     
-}
+} 
 /* -------navbar------- */
 .logo {
     background-image: url(image/logo.png);
@@ -43,6 +43,12 @@ body{
     scale: 1.2;
     transition-duration: 0.4s;
 
+}
+.brand{
+    color: white;
+    font-size: 25px;
+    margin-left: 50px;
+    margin-top: 3px;
 }
 .navBar{
     display: flex;
@@ -855,7 +861,7 @@ textarea{
 .box{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    
     align-items: center;
 
 }
