--- a/style.css
+++ b/style.css
@@ -212,7 +212,9 @@ flex-direction: column;
     font-weight: 700;
     color: white;
     margin-top: 25px;
-    margin-left: 100px;
+    padding-left: 100px;
+    background-image: linear-gradient(to left, rgba(255,0,0,0), rgba(117, 117, 117, 0.3));
+    border-radius: 25px;
 }
 .container1
 {
@@ -325,8 +327,10 @@ th{
 }
 h1{
     color:white;
-    margin-left: 100px;
-    font-size: 50px;
+    padding-left: 100px;
+    font-size: 40px;
+    background-image: linear-gradient(to left, rgba(255,0,0,0), rgba(117,117, 117, 0.3));
+    border-radius: 25px;
 }
 .resPic{
     background-image: url(image/resources.png);
@@ -599,14 +603,14 @@ input[type="checkbox"]{
     width: 40%;
     background-position: center;
     background-size:contain;
-    margin-left: 100px;
+    /* margin-left: 100px; */
     margin-right: 100px;
     background-repeat: no-repeat;
     padding: 0;
 
 }
 .parentsSec{
-    margin-left: 0;
+    margin: 0;
 }
 
 
