--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body{
  
  .background{
     
-    background-image:linear-gradient(to bottom, rgba(10, 10, 10, 0.92), rgba(7, 7, 7, 0.73)), url(image/background.jpg);
+    /* background-image:linear-gradient(to bottom, rgba(10, 10, 10, 0.92), rgba(7, 7, 7, 0.73)), url(image/background.jpg); */
     height: 100vh;
     width: 100vw;
     background-size: cover;
@@ -27,6 +27,19 @@ body{
     position: relative;
     
 } 
+#video{
+
+    position: absolute; 
+    right: 0;
+    bottom: 0;
+    object-fit: cover;
+    height: 100vh;
+    width: 100%;
+    left: 0;
+    right: 0;
+    z-index: -10;
+  
+  }
 /* -------navbar------- */
 .logo {
     background-image: url(image/logo.png);
@@ -49,6 +62,9 @@ body{
     font-size: 25px;
     margin-left: 50px;
     margin-top: 3px;
+}
+.navbarAbsolute{
+    position: absolute;
 }
 .navBar{
     display: flex;
