--- a/style.css
+++ b/style.css
@@ -834,7 +834,7 @@ div::-webkit-scrollbar{
     
 }
 .cContainer1{
-    height: 50%;
+    /* height: 50%; */
 
 }
 .cContainer2{
@@ -848,7 +848,7 @@ div::-webkit-scrollbar{
     width: 250px;
     border: 3px solid wheat;
     box-shadow: 5px 10px 8px 10px #131212;
-    height: 90%;
+  
     margin-bottom: 20px;
 }
 .box:hover{
@@ -1037,7 +1037,7 @@ textarea{
    
 }
 .caroContent1{
-    scroll-snap-type: x mandatory;
+   
     overflow-x: scroll;
     display: flex;
  
@@ -1173,7 +1173,7 @@ padding-right: 100px;
 /* -------------end of carousel section---------- */
 
 
-@media only screen and (max-width: 800px) {
+@media only screen and (min-width: 768px) and (max-width: 1676px) {
 .banner{
     font-size:60px;
     
@@ -1261,20 +1261,20 @@ th{
     font-size: 14px;
     text-align: justify;
     margin: 70px 20px 0px 30px;}
-
 .cContainer{
-    height: 1400px;
+    height: 2150px;
+}
+.cContainer2{
+    height: 1000px;
 
   
     width: 90%;
-    margin: 40px auto;
+    margin: 0px auto;
     
 }
-.cContainer1{
-    height: 500px;
-}
+
 .box{
-    height: 420px;
+    height: 400px;
     margin-top: 0px;
 }
 .caroContent3{
@@ -1318,11 +1318,137 @@ th{
 .studentPic{
     height: 31vh;
 }
-}
 
-@media only screen and (max-width: 975px) {
+
+    
+}
+@media only screen and (min-width: 375px) and (max-width: 767px) {
     .banner{
-        font-size:90px;
+        font-size:40px;
         
     }    
+    .cContainer{
+        height: 2300px;}
+
+#accordion li{
+    width: 60%;
+    margin:0;
+}
+.navBar{
+    flex-direction: column;
+    height: auto;
+    margin-bottom: 20px;
+  
+    
+}
+.navbar-item{
+    flex-direction: column;
+    margin-top: 10px;
+}
+.logo{
+  
+    left: 50%;
+    margin-left: -140px;
+}
+.sign-log{
+    margin-bottom: 10px;
+}
+.container1{
+    margin-left:2px;
+}
+
+.container2{
+    width: 600px;
+}
+.overPic{
+    margin-left: 30px;
+    margin-right: 30px;
+    height: 300px;
+}
+.StudentProCon{
+    margin-left: 30px;
+    margin-right: 30px;
+}
+.content{
+    margin-left: 30px;
+    margin-right: 30px;
+}
+table, th, td{
+    border: 1px solid white;
+    color: white;
+   
+    margin-left: 30px;
+    margin-right: 30px;
+ border-collapse: collapse;
+    padding: 10px;
+    font-size: 12px;
+
+}
+th{
+    font-size: 16px;
+    font-family: 'Ubuntu',sans-serif;
+    background-color: #aca2a2;
+}
+.content1{
+    margin-left: 30px;
+    margin-right: 30px;
+}
+.resPic{
+    margin-left: 30px;
+    margin-right: 30px;
+    height: 300px;
+}
+.studentPic{
+    margin-left: 30px;
+    margin-right: 30px;
+    height: 300px;
+}
+.container1 a{
+    font-size: 12px;
+}
+
+.parentPic{
+    margin-left: 30px;
+    margin-right: 30px;
+    height: 300px;
+    width: 400px;
+}
+.parentSec{
+    display:flex;
+    flex-direction: column;
+
+}
+.parent{
+    height: 1200px;
+}
+
+.bcoldesc1{
+    font-size: 12px;
+    text-align: justify;
+    margin: 10px 20px 0px 30px;}
+.bcoldesc2{
+    font-size: 12px;
+    text-align: justify;
+    margin: 15px 20px 0px 30px;}
+.bcoldesc3{
+    font-size: 12px;
+    text-align: justify;
+    margin: 70px 20px 0px 30px;}
+
+
+    .caroContent1{
+        height: 250px;
+        width: 400px;}
+        .caroIcon{
+            z-index: 1;
+            position: absolute;
+            margin-top: 150px;
+            margin-left: 200px;   
+            background-color: rgba(92, 92, 3, 0.5);
+            border-radius: 15px;
+        }
+        .caroContent3{
+            height: 762px;
+        }
+   
 }
