--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body{
     height:  45px;
     align-items: center;
     padding: 20px;
-    width: 100%;
+    width: 100vw;
     background-color: rgba(255, 192, 0,0.2);
     position: fixed;
     z-index: 1;
@@ -163,7 +163,7 @@ flex-direction: column;
     font-size: 18px;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
-.exploreBtn:hover{
+li.exploreBtn:hover{
     color:rgba(255, 192, 0, 0.4);
     scale: 1.2;
     transition-duration: 0.4s; */
@@ -616,24 +616,20 @@ input[type="checkbox"]{
 .parentPic{
     background-image: url(image/mother3.png);
     height: 100vh; 
-    width: 40%;
+    width: 100%;
     background-position: center;
     background-size:contain;
     /* margin-left: 100px; */
-    margin-right: 100px;
+    /* margin-right: 100px; */
     background-repeat: no-repeat;
     padding: 0;
 
 }
-.parentsSec{
-    margin: 0;
-}
-
 
 
 #accordion{
-    margin: 100px auto;
-    width: 800px;
+    margin: 100px ;
+    width: 80%;
 
 }
 
@@ -644,7 +640,7 @@ input[type="checkbox"]{
     background: #bebcbc;
     padding: 10px;
     border-radius: 4px;
-    margin-right: 100px;
+    margin-right: 1000px;
     
 }
 .parFirst{
@@ -1331,13 +1327,20 @@ th{
         height: 2300px;}
 
 #accordion li{
-    width: 60%;
-    margin:0;
+    width: 90%;
+    margin:0px 0px 0px 0xp;
 }
+#accordion{
+    margin-left: 58px;
+    margin-top: 32px;
+}
+
+
 .navBar{
     flex-direction: column;
     height: auto;
-    margin-bottom: 20px;
+    margin-bottom: 0px;
+  
   
     
 }
@@ -1408,10 +1411,10 @@ th{
 }
 
 .parentPic{
-    margin-left: 30px;
-    margin-right: 30px;
-    height: 300px;
-    width: 400px;
+    margin-left: 2px;
+    margin-right: 2px;
+    height: 250px;
+    width: 350px;
 }
 .parentSec{
     display:flex;
@@ -1435,20 +1438,141 @@ th{
     text-align: justify;
     margin: 70px 20px 0px 30px;}
 
+    .bcol2{
+        margin: 100px 0px 0px 5px
+        }
 
-    .caroContent1{
-        height: 250px;
-        width: 400px;}
-        .caroIcon{
-            z-index: 1;
-            position: absolute;
-            margin-top: 150px;
-            margin-left: 200px;   
-            background-color: rgba(92, 92, 3, 0.5);
-            border-radius: 15px;
-        }
-        .caroContent3{
-            height: 762px;
-        }
+        .caroContent1{
+            height: 250px;
+            width: 400px;}
+            .caroIcon{
+                z-index: 1;
+                position: absolute;
+                margin-top: 150px;
+                margin-left: 200px;   
+                background-color: rgba(92, 92, 3, 0.5);
+                border-radius: 15px;
+            }
+            .caroContent3{
+                height: 762px;
+            }
+     .slide{
+        padding: 0px 45px
+     }
+     .line{
+        width: 200px;
+     }
+     .icon{
+        margin-left: -150px;
+     }
+    .icon i{
+        font-size: 2em;
+        
+     }
+     .bannerSub2{
+        font-size: 20px;
+     }
+     .student-header{
+        font-size: 20px;
+        padding:  0;
+     }
+     .sideNav{
+        padding:0px;
+        
+     }
+     .StudentProCon{
+        font-size: 20px;
+     }
+     .content{
+        font-size: 10px;
+     }
+     .content1{
+        font-size: 10px;
+     }
+     .resPic{
+        height: 300px;
+        margin: 0px 0px 0px 0px;
+     }
+     .overPic{
+        height: 215px;
+     }
+     h1{
+        padding-left: 0px;
+     }
+   
+     .cContainer{
+        width: 90%;
+     }
+.year{
+    font-size: 20px;
+}
+.bcoldesc1{
+    font-size: 8px;
+}
+.bcoldesc2{
+    font-size: 8px;
+}
+.bcoldesc3{
+    font-size: 8px;
+}
+
+.parFirst{
+    font-size: 14px;
+}
+strong{
+    font-size: 12px;
+}
+.firstcontent p {
+    font-size: 10px;
+}
+.navBar{
+    background-color: rgb(128, 98, 8);
+}
+
+.logContainer{
+   
+    width: 300px;
+    padding: 20px;
+    border-radius: 4px;
+    
+   
+
+}
+.logContainer {
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    margin-left: -150px;
+   
    
 }
+label{
+    display: block;
+    color: white;
+    font-size: 14px;
+    margin-top: 10px;
+}
+
+.signcontainer{
+    display: none;
+    width: 300px;
+    padding: 20px;
+    border-radius: 4px;
+    background-color: rgb(138, 136, 133);
+    border: 1px solid rgba(17, 16, 17, 0.2);
+   
+
+}
+.signcontainer {
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    margin-left: -145px;
+    
+   
+}
+    }
+
+
+   
+
